Fix broken CSS everywhere. Not sure _why_ that #container is needed, but it is

--- a/modules/home/src/main/webapp/static/css/embeddable.less
+++ b/modules/home/src/main/webapp/static/css/embeddable.less
@@ -4,7 +4,7 @@ html.iframe {
 }
 
 @import "css3.less";
-.tabula-page {
+.tabula-page, #container {
   @import "bootstrap/bootstrap.less";
   @import "bootstrap/responsive.less";
 }
